@@ -1,9 +1,11 @@
 package com.ssafy.dingdong.domain.room.service;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -11,11 +13,13 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.ssafy.dingdong.domain.member.entity.Member;
 import com.ssafy.dingdong.domain.member.repository.MemberRepository;
-import com.ssafy.dingdong.domain.member.service.MemberService;
 import com.ssafy.dingdong.domain.room.dto.request.RoomUpdateRequestDto;
 import com.ssafy.dingdong.domain.room.dto.response.FurnitureDetailDto;
 import com.ssafy.dingdong.domain.room.dto.response.FurnitureSummaryDto;
+import com.ssafy.dingdong.domain.room.dto.response.RoomFurnitureDetailDto;
+import com.ssafy.dingdong.domain.room.dto.response.RoomResponseAllDetailDto;
 import com.ssafy.dingdong.domain.room.dto.response.RoomResponseDto;
 import com.ssafy.dingdong.domain.room.dto.response.RoomScoreDto;
 import com.ssafy.dingdong.domain.room.entity.Furniture;
@@ -44,6 +48,14 @@ public class RoomServiceImpl implements RoomService {
 	private final RoomHeartRepository roomHeartRepository;
 
 	@Override
+	public String getMemberIdByRoomId(Long roomId){
+		Room room = roomRepository.findByRoomId(roomId).orElseThrow(
+			() -> new CustomException(ExceptionStatus.ROOM_NOT_FOUND)
+		);
+		return room.getMemberId();
+	}
+
+	@Override
 	@Transactional
 	public RoomResponseDto getRoomByMemberId(String memberId) {
 		Room findRoom = roomRepository.findByMemberId(memberId).orElseThrow(
@@ -55,20 +67,44 @@ public class RoomServiceImpl implements RoomService {
 
 	@Override
 	@Transactional
-	public RoomResponseDto getRoomByRoomId(Long roomId) {
+	public RoomResponseAllDetailDto getRoomByRoomId(Long roomId) {
 		Room findRoom = roomRepository.findByRoomId(roomId).orElseThrow(
 			() -> new CustomException(ExceptionStatus.ROOM_NOT_FOUND)
 		);
+
+		Member member = memberRepository.findByMemberId(UUID.fromString(findRoom.getMemberId())).orElseThrow(
+			() -> new CustomException(ExceptionStatus.MEMBER_NOT_FOUND)
+		);
+
+		List<RoomFurnitureDetailDto> roomFurnitureList = new ArrayList<>();
+
+		findRoom.getRoomFurnitureList().stream().forEach(
+			roomFurniture -> {
+				Furniture furniture = furnitureRepository.findById(roomFurniture.getFurnitureId()).orElseThrow(
+					() -> new CustomException(ExceptionStatus.EXCEPTION)
+				);
+				RoomFurnitureDetailDto roomFurnitureDetailDto = new RoomFurnitureDetailDto(
+					new FurnitureDetailDto(furniture), roomFurniture);
+				roomFurnitureList.add(roomFurnitureDetailDto);
+			}
+		);
+
 		Long heartCount = roomHeartRepository.getCountByRoomId(findRoom.getRoomId());
-		return findRoom.toRoomResponseDto(heartCount);
+		return RoomResponseAllDetailDto.builder()
+			.nickname(member.getNickname())
+			.roomId(findRoom.getRoomId())
+			.heartCount(heartCount)
+			.roomFurnitureList(roomFurnitureList)
+			.build();
 	}
 
 	@Override
-	public void createRoom(String memberId) {
+	public Long createRoom(String memberId) {
 		Room room = Room.builder()
 			.memberId(memberId)
 			.build();
 		roomRepository.save(room);
+		return room.getRoomId();
 	}
 
 	@Override
@@ -112,9 +148,9 @@ public class RoomServiceImpl implements RoomService {
 					RoomFurniture newRoomFurniture = RoomFurniture.builder()
 						.roomId(roomId)
 						.furnitureId(updateFurniture.furnitureId())
-						.xPos(updateFurniture.xPos())
-						.yPos(updateFurniture.yPos())
-						.zPos(updateFurniture.zPos())
+						.xPos(updateFurniture.position().get(0))
+						.yPos(updateFurniture.position().get(1))
+						.zPos(updateFurniture.position().get(2))
 						.rotation(updateFurniture.rotation())
 						.build();
 					roomFurnitureRepository.save(newRoomFurniture);
@@ -131,7 +167,7 @@ public class RoomServiceImpl implements RoomService {
 
 	@Override
 	@Transactional
-	public void createHeartRoom(String memberId, Long roomId) {
+	public String createHeartRoom(String memberId, Long roomId) {
 		roomHeartRepository.findByMemberIdAndRoomId(memberId, roomId)
 			.ifPresentOrElse(
 				RoomHeart::updateStatus,
@@ -143,6 +179,24 @@ public class RoomServiceImpl implements RoomService {
 					roomHeartRepository.save(newRecord);
 				}
 			);
+
+		return isHeartRoom(memberId, roomId);
+	}
+
+	@Override
+	@Transactional
+	public String isHeartRoom(String memberId, Long roomId) {
+		RoomHeart roomHeartInfo = roomHeartRepository.findByMemberIdAndRoomId(memberId, roomId).orElse(null);
+
+		if (roomHeartInfo == null) {
+			return "N";
+		} else {
+			if (roomHeartInfo.getCreateTime() != null) {
+				return "Y";
+			} else {
+				return "N";
+			}
+		}
 	}
 
 	@Override
@@ -163,7 +217,7 @@ public class RoomServiceImpl implements RoomService {
 				roomScore.setNickname(nickname);
 			}
 		);
-		return roomScoreList.stream().toList();
+		return roomScoreList.stream().collect(Collectors.toList());
 	}
 
 	@Override
